# dx

./: .lore.json  AGENTS.md  Cargo.toml  README.md  flake.nix
.github/workflows/: push-pr-ci.yml  release-homebrew.yml  release.yml
.opencode/agents/: opsx-implement.md  opsx-review.md
.opencode/command/: opsx-apply.md  opsx-archive.md  opsx-continue.md  opsx-ff.md  opsx-new.md  opsx-propose.md  opsx-sync.md  opsx-verify.md
benches/: resolve_latency.rs
docs/: cd-extras-cli-prd.md  command-guide.md  configuration.md  faq.md  quickstart.md  review-remediation-impact-2026-04-16.md  shell-hook-guarding.md  shell-setup.md  troubleshooting.md
docs/reviews/: whole-repo-review-2026-04-16.md
plans/architectural-doc-code-alignment/: plan.md  todo.md
plans/user-facing-docs-overhaul/: plan.md  todo.md
plans/whole-repo-review-remediation/: plan.md  todo.md
reviews/: code-review-1.md
scripts/: check-release-readiness.sh
scripts/hooks/: dx.bash  dx.zsh
src/: lib.rs  main.rs  test_support.rs
src/bookmarks/: mod.rs  storage.rs
src/cli/: bookmarks.rs  complete.rs  init.rs  menu.rs  mod.rs  resolve.rs  stacks.rs
src/common/: mod.rs
src/complete/: ancestors.rs  filter.rs  mod.rs  paths.rs  recents.rs  stack.rs
src/config/: mod.rs
src/frecency/: mod.rs
src/hooks/: bash.rs  common.rs  fish.rs  mod.rs  (+2 more)
tech-docs/: cd-extras-cli-prd.md  configuration.md  shell-hook-guarding.md
tests/: bookmarks_cli.rs  complete_cli.rs  init_cli.rs  menu_cli.rs  navigate_cli.rs  resolve_cli.rs  resolve_latency.rs  resolve_precedence.rs  shell_hook_guard.rs  stacks_cli.rs
(+138 files in other folders)
