[package]
name = "cdex"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dx"
path = "src/lib.rs"

[[bin]]
name = "dx"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
crossterm = { version = "0.28", features = ["use-dev-tty"] }
dirs = "5.0"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
toml = "0.8"

[[bench]]
name = "resolve_latency"
harness = false
